hphp/hack/test/typecheck/tuple_index_2.php.exp
File "tuple_index_2.php", line 20, characters 14-18:
Invalid return type (Typing[4110])
File "tuple_index_2.php", line 12, characters 22-24:
Expected int
File "tuple_index_2.php", line 16, characters 13-17:
But got string
